--- a/grpo.ipynb
+++ b/grpo.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%capture\n",
     "# Skip restarting message in Colab\n",
     "import sys; modules = list(sys.modules.keys())\n",
