Tweaks to prompt and notebook

--- a/grpo.ipynb
+++ b/grpo.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "from unsloth import is_bfloat16_supported\n",
     "import torch\n",
-    "max_seq_length = 512 # Can increase for longer reasoning traces\n",
+    "max_seq_length = 16384 # Can increase for longer reasoning traces\n",
     "lora_rank = 32 # Larger rank = smarter, but slower\n",
     "\n",
     "model, tokenizer = FastLanguageModel.from_pretrained(\n",
@@ -124,7 +124,9 @@
    "outputs": [],
    "source": [
     "import re\n",
-    "from datasets import load_dataset, Dataset\n",
+    "from datasets import Dataset\n",
+    "\n",
+    "from lib.prompts import get_moderation_prompt\n",
     "\n",
     "# Load and prep dataset\n",
     "SYSTEM_PROMPT = \"\"\"\n",
@@ -151,18 +153,13 @@
     "    answer = answer.split(\"</answer>\")[0]\n",
     "    return answer.strip()\n",
     "\n",
-    "def extract_hash_answer(text: str) -> str | None:\n",
-    "    if \"####\" not in text:\n",
-    "        return None\n",
-    "    return text.split(\"####\")[1].strip()\n",
-    "\n",
     "def get_moderation_dataset(data) -> Dataset:\n",
     "    formatted_data = []\n",
     "    for item in data:\n",
     "        formatted_data.append({\n",
     "            'prompt': [\n",
     "                {'role': 'system', 'content': SYSTEM_PROMPT},\n",
-    "                {'role': 'user', 'content': item['input']}\n",
+    "                {'role': 'user', 'content': get_moderation_prompt(item['input'])}\n",
     "            ],\n",
     "            'answer': item['expected']  # ALLOWED or DISALLOWED\n",
     "        })\n",
