Add save model to hf at end

--- a/grpo.ipynb
+++ b/grpo.ipynb
@@ -267,6 +267,15 @@
     ")\n",
     "trainer.train()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.push_to_hub_merged(\"mwhitt/mod-llm-demo\", tokenizer, save_method = \"merged_16bit\", token = \"\")"
+   ]
   }
  ],
  "metadata": {
