--- a/grpo.ipynb
+++ b/grpo.ipynb
@@ -97,10 +97,10 @@
     }
    ],
    "source": [
-    "from lib.evaluations import collect_eval_data\n",
+    "from lib.utils import collect_file_data\n",
     "\n",
     "\n",
-    "allowed_data, disallowed_data = collect_eval_data()\n",
+    "allowed_data, disallowed_data = collect_file_data(\"train\")\n",
     "\n",
     "print(\n",
     "    f\"Collected {len(allowed_data)} allowed files and {len(disallowed_data)} disallowed files\"\n",
@@ -112,9 +112,7 @@
     "    if i < len(allowed_data):\n",
     "        combined_data.append(allowed_data[i])\n",
     "    if i < len(disallowed_data):\n",
-    "        combined_data.append(disallowed_data[i])\n",
-    "\n",
-    "print(\"Combined Data: \", combined_data[3])\n"
+    "        combined_data.append(disallowed_data[i])"
    ]
   },
   {
@@ -233,13 +231,13 @@
     "    bf16 = is_bfloat16_supported(),\n",
     "    fp16 = not is_bfloat16_supported(),\n",
     "    per_device_train_batch_size = 1,\n",
-    "    gradient_accumulation_steps = 1, # Increase to 4 for smoother training\n",
+    "    gradient_accumulation_steps = 4, # Increase to 4 for smoother training\n",
     "    num_generations = 6, # Decrease if out of memory\n",
-    "    max_prompt_length = 256,\n",
-    "    max_completion_length = 200,\n",
+    "    max_prompt_length = 10240,\n",
+    "    max_completion_length = 512,\n",
     "    # num_train_epochs = 1, # Set to 1 for a full training run\n",
-    "    max_steps = 250,\n",
-    "    save_steps = 250,\n",
+    "    max_steps = 1000,\n",
+    "    save_steps = 1000,\n",
     "    max_grad_norm = 0.1,\n",
     "    report_to = \"none\", # Can use Weights & Biases\n",
     "    output_dir = \"outputs\",\n",
