--- a/grpo.ipynb
+++ b/grpo.ipynb
@@ -30,6 +30,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import wandb\n",
+    "\n",
+    "wb_token = \"<REPLACE_WITH_WEIGHTS_AND_BIASES_TOKEN>\"\n",
+    "\n",
+    "wandb.login(key=wb_token)\n",
+    "run = wandb.init(\n",
+    "    project='Fine-tune Llama-3.1-8B-Instruct on Moderation Dataset', \n",
+    "    job_type=\"training\", \n",
+    "    anonymous=\"allow\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from unsloth import FastLanguageModel, PatchFastRL\n",
     "PatchFastRL(\"GRPO\", FastLanguageModel)"
    ]
