Fix wandb setup

--- a/grpo.ipynb
+++ b/grpo.ipynb
@@ -20,7 +20,7 @@
     "import sys; modules = list(sys.modules.keys())\n",
     "for x in modules: sys.modules.pop(x) if \"PIL\" in x or \"google\" in x else None\n",
     "\n",
-    "!pip install unsloth vllm\n",
+    "!pip install unsloth vllm wandb\n",
     "!pip install --upgrade pillow"
    ]
   },
@@ -36,7 +36,7 @@
     "\n",
     "wandb.login(key=wb_token)\n",
     "run = wandb.init(\n",
-    "    project='Fine-tune Llama-3.1-8B-Instruct on Moderation Dataset', \n",
+    "    project='GRPO Llama-3.1-8B-Instruct on Moderation Dataset', \n",
     "    job_type=\"training\", \n",
     "    anonymous=\"allow\"\n",
     ")"
