Clean up the wandb setup

--- a/grpo.ipynb
+++ b/grpo.ipynb
@@ -30,24 +30,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import wandb\n",
-    "\n",
-    "wb_token = \"<REPLACE_WITH_WEIGHTS_AND_BIASES_TOKEN>\"\n",
-    "\n",
-    "wandb.login(key=wb_token)\n",
-    "run = wandb.init(\n",
-    "    project='GRPO Llama-3.1-8B-Instruct on Moderation Dataset', \n",
-    "    job_type=\"training\", \n",
-    "    anonymous=\"allow\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from unsloth import FastLanguageModel, PatchFastRL\n",
     "PatchFastRL(\"GRPO\", FastLanguageModel)"
    ]
@@ -268,6 +250,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import wandb\n",
+    "import wandb\n",
+    "import os\n",
+    "\n",
+    "# Initialize wandb with your API key from environment variables\n",
+    "wandb.login(key=os.environ.get('WANDB_API_KEY'))\n",
+    "\n",
+    "# Update training_args to report to wandb\n",
+    "training_args.report_to = \"wandb\"\n",
+    "\n",
+    "# Create a wandb run\n",
+    "wandb_run = wandb.init(\n",
+    "    project=\"mod-llm-demo\",\n",
+    "    name=\"grpo-training\",\n",
+    "    config={\n",
+    "        \"learning_rate\": training_args.learning_rate,\n",
+    "        \"batch_size\": training_args.per_device_train_batch_size,\n",
+    "        \"model\": \"llama-3.1-8b\",\n",
+    "        \"num_generations\": training_args.num_generations,\n",
+    "        \"max_steps\": training_args.max_steps\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "# Watch the model\n",
+    "wandb.watch(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "trainer = GRPOTrainer(\n",
     "    model = model,\n",
     "    processing_class = tokenizer,\n",
@@ -282,6 +297,16 @@
     "    train_dataset = dataset,\n",
     ")\n",
     "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Close the wandb run when training is complete\n",
+    "wandb_run.finish()"
    ]
   },
   {
